# emuse

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  bootstrap  compose.yml  eslint.config.js  pyproject.toml
emuse/: __version__.py  common.py  config.py  database.py  dev.py  log-config.yaml  main.py  session.py  template.py
emuse/endpoints/: __init__.py  index.py  login.py  logout.py
emuse/models/: account.py
emuse/templates/: index.html.j2
postgres/: emuse.sql  pathetic.sql
src/emuse/: __init__.py  __version__.py  common.py  database.py  dev.py  email.py  logconfig.toml  main.py  session.py  template.py  turnstile.py
src/emuse/endpoints/: __init__.py  index.py  login.py  logout.py  me.py  signup.py  turnstile.py  verify_email.py
src/emuse/models/: account.py
src/emuse/templates/: index.html.j2
src/emuse/templates/email/: verify.html.j2  verify.txt.j2
src/ui/: eslint.config.js  package-lock.json  package.json  vite.config.ts
src/ui/src/: App.css  App.tsx  index.css  main.tsx  webawesome.d.ts
src/ui/src/components/: Header.tsx  ProtectedRoute.tsx
src/ui/src/contexts/: AuthContext.tsx
src/ui/src/pages/: Home.tsx  Login.tsx  Signup.tsx  SignupSuccess.tsx  VerifyEmail.tsx
ui/: index.html  package-lock.json  package.json
ui/src/: main.tsx
ui/src/components/: header.tsx  notifications.tsx  profileDropdown.tsx
ui/src/pages/: Login.tsx
