[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emuse"
dynamic = ["version"]
description = "Sourcee for emuse.org"
authors = [{ name = "Gavin M. Roy", email = "gavinmroy@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi[standard]",
    "fastapi-sessions",
    "google-auth",
    "httpx",
    "jinja2",
    "jinja2_time",
    "psycopg[pool]",
    "pydantic[email,timezone]",
    "pydantic_extra_types",
    "pydantic_settings",
    "python-ulid",
    "tzdata",
    "uuid-utils",
    "uvicorn",
    "yarl"
]

[project.optional-dependencies]
dev = [
  "build",
  "coverage",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "ruff"
]

[project.scripts]
emuse = "emuse.main:main"

[tool.coverage.html]
directory = "build/coverage"

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.coverage.run]
branch = true
source = ["src/emuse"]
command_line = "-m pytest"

[tool.coverage.xml]
output = "build/reports/coverage.xml"

[tool.hatch.build]

[tool.hatch.build.targets.wheel]
src-layout = true

[tool.hatch.version]
path = "src/emuse/__version__.py"

[tool.hatch.envs.default]
python = "python3.12"
features = ["dev"]

[tool.mkdocs]
config-file = "mkdocs.yml"

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.format]
preview = true
quote-style = "single"
docstring-code-format = true
docstring-code-line-length = 40
skip-magic-trailing-comma = true

[tool.ruff.lint]
preview = true
dummy-variable-rgx = "^_$"
select = [
    "BLE",      # flake8-blind-except
    "C4",       # flake8-comprehensions
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "G",        # flake8-logging-format
    "I",        # isort
    "N",        # pep8-naming
    "Q",        # flake8-quotes
    "S",        # flake8-bandit
    "ASYNC",    # flake8-async
    "B",        # flake8-bugbear
    "DTZ",      # flake8-datetimez
    "FURB",     # refurb
    "RUF",      # ruff-specific
    "T20",      # flake8-print
    "UP",       # pyupgrade
]
ignore = [
    "B008",     # FastAPI's Depends() pattern in function defaults is intentional
    "N818",     # exception class names are not required to end in Error
    "RSE",      # contradicts Python Style Guide
    "UP040",    # allow non-pep695-type-alias
]
flake8-quotes = { inline-quotes = "single" }

[tool.ruff.lint.isort]
split-on-trailing-comma=false

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S"]
